src/antlr/generated/pawnParser.ts
// Generated from .\src\antlr\generated\pawn.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { pawnListener } from "./pawnListener";
import { pawnVisitor } from "./pawnVisitor";


export class pawnParser extends Parser {
	public static readonly OPEN_PARENTHESIS = 1;
	public static readonly CLOSE_PARENTHESIS = 2;
	public static readonly CURLY_OPEN_BRACKET = 3;
	public static readonly CURLY_CLOSE_BRACKET = 4;
	public static readonly SQUARE_OPEN_BRACKET = 5;
	public static readonly SQUARE_CLOSE_BRACKET = 6;
	public static readonly COMA = 7;
	public static readonly SEMI = 8;
	public static readonly ASSIGMENT = 9;
	public static readonly ASSIGMENT_PLUS = 10;
	public static readonly ASSIGMENT_MINUS = 11;
	public static readonly ASSIGMENT_MULT = 12;
	public static readonly ASSIGMENT_DIV = 13;
	public static readonly ASSIGMENT_REMAINDE = 14;
	public static readonly ASSIGMENT_AND = 15;
	public static readonly ASSIGMENT_OR = 16;
	public static readonly ASSIGMENT_XOR = 17;
	public static readonly ASSIGMENT_RIGHT = 18;
	public static readonly ASSIGMENT_RIGHT_LOG = 19;
	public static readonly ASSIGMENT_LEFT = 20;
	public static readonly PLUS = 21;
	public static readonly MINUS = 22;
	public static readonly MULTY = 23;
	public static readonly DIV = 24;
	public static readonly REMAINDE = 25;
	public static readonly INCREMENTS = 26;
	public static readonly DECREMENTS = 27;
	public static readonly EQUAL = 28;
	public static readonly NOTEQUAL = 29;
	public static readonly LESS = 30;
	public static readonly LARGER = 31;
	public static readonly LESSEQ = 32;
	public static readonly LARGEREQ = 33;
	public static readonly QUESTION = 34;
	public static readonly COLON = 35;
	public static readonly OR = 36;
	public static readonly AND = 37;
	public static readonly NOT = 38;
	public static readonly BIT_AND = 39;
	public static readonly BIT_OR = 40;
	public static readonly BIT_XOR = 41;
	public static readonly BIT_COMPLEMEN = 42;
	public static readonly BIT_RIGHT = 43;
	public static readonly BIT_LEFT = 44;
	public static readonly BIT_RIGHT_LOG = 45;
	public static readonly PERIOD = 46;
	public static readonly ASSERT = 47;
	public static readonly EXIT = 48;
	public static readonly GOTO = 49;
	public static readonly SLEEP = 50;
	public static readonly STATE = 51;
	public static readonly RETURN = 52;
	public static readonly NEW = 53;
	public static readonly ENUM = 54;
	public static readonly CONST = 55;
	public static readonly STATIC = 56;
	public static readonly STOCK = 57;
	public static readonly FORWARD = 58;
	public static readonly NATIVE = 59;
	public static readonly PUBLIC = 60;
	public static readonly OPERATOR = 61;
	public static readonly IF = 62;
	public static readonly ELSE = 63;
	public static readonly SWITCH = 64;
	public static readonly CASE = 65;
	public static readonly DEFAULT = 66;
	public static readonly WHILE = 67;
	public static readonly FOR = 68;
	public static readonly DO = 69;
	public static readonly CONTINUE = 70;
	public static readonly BREAK = 71;
	public static readonly CHAR = 72;
	public static readonly DEFINED = 73;
	public static readonly SIZEOF = 74;
	public static readonly TAGOF = 75;
	public static readonly DEFINE = 76;
	public static readonly ELSEIF = 77;
	public static readonly EMIT = 78;
	public static readonly ENDIF = 79;
	public static readonly ENDINPUT = 80;
	public static readonly ENDSCRIPT = 81;
	public static readonly ERROR = 82;
	public static readonly FILE = 83;
	public static readonly INCLUDE = 84;
	public static readonly LINE = 85;
	public static readonly PRAGMA = 86;
	public static readonly SECTION = 87;
	public static readonly TRYINCLUDE = 88;
	public static readonly UNDEF = 89;
	public static readonly DYNAMIC = 90;
	public static readonly WARNING = 91;
	public static readonly DISABLE = 92;
	public static readonly ENABLE = 93;
	public static readonly TRUE = 94;
	public static readonly FALSE = 95;
	public static readonly SHARPSTRING = 96;
	public static readonly STRING = 97;
	public static readonly ANGLEDSTRING = 98;
	public static readonly IDENTIFIER = 99;
	public static readonly INTEGER = 100;
	public static readonly FLOAT = 101;
	public static readonly Whitespace = 102;
	public static readonly Newline = 103;
	public static readonly BlockComment = 104;
	public static readonly LineComment = 105;
	public static readonly RULE_file = 0;
	public static readonly RULE_declaration = 1;
	public static readonly RULE_enum = 2;
	public static readonly RULE_enumMember = 3;
	public static readonly RULE_enumIterator = 4;
	public static readonly RULE_functionDecl = 5;
	public static readonly RULE_tag = 6;
	public static readonly RULE_variable = 7;
	public static readonly RULE_arrayIndex = 8;
	public static readonly RULE_funcDeclModif = 9;
	public static readonly RULE_funcModif = 10;
	public static readonly RULE_statement = 11;
	public static readonly RULE_controlStatments = 12;
	public static readonly RULE_var_definition = 13;
	public static readonly RULE_assigment = 14;
	public static readonly RULE_arrayInit = 15;
	public static readonly RULE_arrayInitMember = 16;
	public static readonly RULE_assigments = 17;
	public static readonly RULE_grouping = 18;
	public static readonly RULE_expresion = 19;
	public static readonly RULE_ternarOperator = 20;
	public static readonly RULE_preOperators = 21;
	public static readonly RULE_operation = 22;
	public static readonly RULE_varOrLiteral = 23;
	public static readonly RULE_declParams = 24;
	public static readonly RULE_reference = 25;
	public static readonly RULE_varModifires = 26;
	public static readonly RULE_rValue = 27;
	public static readonly RULE_sizeof = 28;
	public static readonly RULE_number = 29;
	public static readonly RULE_operator = 30;
	public static readonly RULE_arefmeticOperator = 31;
	public static readonly RULE_logicOperator = 32;
	public static readonly RULE_bitwiseOperator = 33;
	public static readonly RULE_if_statement = 34;
	public static readonly RULE_else_statement = 35;
	public static readonly RULE_switch = 36;
	public static readonly RULE_case = 37;
	public static readonly RULE_case_list = 38;
	public static readonly RULE_range = 39;
	public static readonly RULE_condition = 40;
	public static readonly RULE_codeBlock = 41;
	public static readonly RULE_return = 42;
	public static readonly RULE_cycles = 43;
	public static readonly RULE_do = 44;
	public static readonly RULE_while = 45;
	public static readonly RULE_for = 46;
	public static readonly RULE_cycleBody = 47;
	public static readonly RULE_cycleKeywords = 48;
	public static readonly RULE_literal = 49;
	public static readonly RULE_bool_const = 50;
	public static readonly RULE_string = 51;
	public static readonly RULE_angledString = 52;
	public static readonly RULE_functionCall = 53;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"file", "declaration", "enum", "enumMember", "enumIterator", "functionDecl", 
		"tag", "variable", "arrayIndex", "funcDeclModif", "funcModif", "statement", 
		"controlStatments", "var_definition", "assigment", "arrayInit", "arrayInitMember", 
		"assigments", "grouping", "expresion", "ternarOperator", "preOperators", 
		"operation", "varOrLiteral", "declParams", "reference", "varModifires", 
		"rValue", "sizeof", "number", "operator", "arefmeticOperator", "logicOperator", 
		"bitwiseOperator", "if_statement", "else_statement", "switch", "case", 
		"case_list", "range", "condition", "codeBlock", "return", "cycles", "do", 
		"while", "for", "cycleBody", "cycleKeywords", "literal", "bool_const", 
		"string", "angledString", "functionCall",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'('", "')'", "'{'", "'}'", "'['", "']'", "','", "';'", "'='", 
		"'+='", "'-='", "'*='", "'/='", "'%='", "'&='", "'|='", "'^='", "'>>='", 
		"'>>>='", "'<<='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", 
		"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'?'", "':'", "'||'", "'&&'", 
		"'!'", "'&'", "'|'", "'^'", "'~'", "'>>'", "'<<'", "'>>>'", "'..'", "'assert'", 
		"'exit'", "'goto'", "'sleep'", "'state'", "'return'", "'new'", "'enum'", 
		"'const'", "'static'", "'stock'", "'forward'", "'native'", "'public'", 
		"'operator'", "'if'", "'else'", "'switch'", "'case'", "'default'", "'while'", 
		"'for'", "'do'", "'continue'", "'break'", "'char'", "'defined'", "'sizeof'", 
		"'tagof'", "'define'", "'#elsei'", "'emit'", "'endif'", "'endinput'", 
		"'endscript'", "'error'", "'file'", "'include'", "'line'", "'pragma'", 
		"'section'", "'tryinclude'", "'undef'", "'dynamic'", "'warning'", "'disable'", 
		"'enable'", "'true'", "'false'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "CURLY_OPEN_BRACKET", 
		"CURLY_CLOSE_BRACKET", "SQUARE_OPEN_BRACKET", "SQUARE_CLOSE_BRACKET", 
		"COMA", "SEMI", "ASSIGMENT", "ASSIGMENT_PLUS", "ASSIGMENT_MINUS", "ASSIGMENT_MULT", 
		"ASSIGMENT_DIV", "ASSIGMENT_REMAINDE", "ASSIGMENT_AND", "ASSIGMENT_OR", 
		"ASSIGMENT_XOR", "ASSIGMENT_RIGHT", "ASSIGMENT_RIGHT_LOG", "ASSIGMENT_LEFT", 
		"PLUS", "MINUS", "MULTY", "DIV", "REMAINDE", "INCREMENTS", "DECREMENTS", 
		"EQUAL", "NOTEQUAL", "LESS", "LARGER", "LESSEQ", "LARGEREQ", "QUESTION", 
		"COLON", "OR", "AND", "NOT", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_COMPLEMEN", 
		"BIT_RIGHT", "BIT_LEFT", "BIT_RIGHT_LOG", "PERIOD", "ASSERT", "EXIT", 
		"GOTO", "SLEEP", "STATE", "RETURN", "NEW", "ENUM", "CONST", "STATIC", 
		"STOCK", "FORWARD", "NATIVE", "PUBLIC", "OPERATOR", "IF", "ELSE", "SWITCH", 
		"CASE", "DEFAULT", "WHILE", "FOR", "DO", "CONTINUE", "BREAK", "CHAR", 
		"DEFINED", "SIZEOF", "TAGOF", "DEFINE", "ELSEIF", "EMIT", "ENDIF", "ENDINPUT", 
		"ENDSCRIPT", "ERROR", "FILE", "INCLUDE", "LINE", "PRAGMA", "SECTION", 
		"TRYINCLUDE", "UNDEF", "DYNAMIC", "WARNING", "DISABLE", "ENABLE", "TRUE", 
		"FALSE", "SHARPSTRING", "STRING", "ANGLEDSTRING", "IDENTIFIER", "INTEGER", 
		"FLOAT", "Whitespace", "Newline", "BlockComment", "LineComment",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(pawnParser._LITERAL_NAMES, pawnParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return pawnParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "pawn.g4"; }

	// @Override
	public get ruleNames(): string[] { return pawnParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return pawnParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(pawnParser._ATN, this);
	}
	// @RuleVersion(0)
	public file(): FileContext {
		let _localctx: FileContext = new FileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, pawnParser.RULE_file);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 53)) & ~0x1F) === 0 && ((1 << (_la - 53)) & ((1 << (pawnParser.NEW - 53)) | (1 << (pawnParser.ENUM - 53)) | (1 << (pawnParser.STOCK - 53)) | (1 << (pawnParser.FORWARD - 53)) | (1 << (pawnParser.NATIVE - 53)) | (1 << (pawnParser.PUBLIC - 53)))) !== 0) || _la === pawnParser.IDENTIFIER) {
				{
				{
				this.state = 108;
				this.declaration();
				}
				}
				this.state = 113;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 114;
			this.match(pawnParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, pawnParser.RULE_declaration);
		try {
			this.state = 123;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case pawnParser.NEW:
			case pawnParser.STOCK:
			case pawnParser.FORWARD:
			case pawnParser.NATIVE:
			case pawnParser.PUBLIC:
			case pawnParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 120;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case pawnParser.STOCK:
				case pawnParser.FORWARD:
				case pawnParser.NATIVE:
				case pawnParser.PUBLIC:
				case pawnParser.IDENTIFIER:
					{
					this.state = 116;
					this.functionDecl();
					}
					break;
				case pawnParser.NEW:
					{
					this.state = 117;
					this.var_definition();
					this.state = 118;
					this.match(pawnParser.SEMI);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case pawnParser.ENUM:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 122;
				this.enum();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public enum(): EnumContext {
		let _localctx: EnumContext = new EnumContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, pawnParser.RULE_enum);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 125;
			this.match(pawnParser.ENUM);
			this.state = 127;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === pawnParser.IDENTIFIER) {
				{
				this.state = 126;
				this.match(pawnParser.IDENTIFIER);
				}
			}

			this.state = 130;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === pawnParser.OPEN_PARENTHESIS) {
				{
				this.state = 129;
				this.enumIterator();
				}
			}

			this.state = 132;
			this.match(pawnParser.CURLY_OPEN_BRACKET);
			this.state = 141;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === pawnParser.IDENTIFIER) {
				{
				this.state = 133;
				this.enumMember();
				this.state = 138;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === pawnParser.COMA) {
					{
					{
					this.state = 134;
					this.match(pawnParser.COMA);
					this.state = 135;
					this.enumMember();
					}
					}
					this.state = 140;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 143;
			this.match(pawnParser.CURLY_CLOSE_BRACKET);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public enumMember(): EnumMemberContext {
		let _localctx: EnumMemberContext = new EnumMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, pawnParser.RULE_enumMember);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 145;
			this.variable();
			this.state = 148;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === pawnParser.ASSIGMENT) {
				{
				this.state = 146;
				this.match(pawnParser.ASSIGMENT);
				this.state = 147;
				this.expresion();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public enumIterator(): EnumIteratorContext {
		let _localctx: EnumIteratorContext = new EnumIteratorContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, pawnParser.RULE_enumIterator);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 150;
			this.match(pawnParser.OPEN_PARENTHESIS);
			this.state = 151;
			_la = this._input.LA(1);
			if (!((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << pawnParser.ASSIGMENT_PLUS) | (1 << pawnParser.ASSIGMENT_MULT) | (1 << pawnParser.ASSIGMENT_LEFT))) !== 0))) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 152;
			this.match(pawnParser.INTEGER);
			this.state = 153;
			this.match(pawnParser.CLOSE_PARENTHESIS);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public functionDecl(): FunctionDeclContext {
		let _localctx: FunctionDeclContext = new FunctionDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, pawnParser.RULE_functionDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 57)) & ~0x1F) === 0 && ((1 << (_la - 57)) & ((1 << (pawnParser.STOCK - 57)) | (1 << (pawnParser.FORWARD - 57)) | (1 << (pawnParser.NATIVE - 57)) | (1 << (pawnParser.PUBLIC - 57)))) !== 0)) {
				{
				this.state = 155;
				this.funcDeclModif();
				}
			}

			this.state = 159;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 9, this._ctx) ) {
			case 1:
				{
				this.state = 158;
				this.tag();
				}
				break;
			}
			this.state = 161;
			this.match(pawnParser.IDENTIFIER);
			this.state = 162;
			this.match(pawnParser.OPEN_PARENTHESIS);
			this.state = 171;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === pawnParser.BIT_AND || _la === pawnParser.CONST || _la === pawnParser.IDENTIFIER) {
				{
				this.state = 163;
				this.declParams();
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === pawnParser.COMA) {
					{
					{
					this.state = 164;
					this.match(pawnParser.COMA);
					this.state = 165;
					this.declParams();
					}
					}
					this.state = 170;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}
